--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ li.gnb_seclect a{ color: #26d281; }
 
 .con_02_wrap .container_01{height: 675px; padding-top: 80px; text-align: center; padding-bottom: 70px; position: relative;}
 .con_02_wrap h2{ height: 30px; line-height: 30px; font-size: 30px; margin-bottom: 50px;}
-.map{ width: 1400px; height: 566px; background: url(../images/map.png) center center no-repeat; position: relative; }
+.map{ width: 1400px; height: 566px; position: relative; }
 .map_btn{ width: 340px; height: 60px; line-height: 60px; font-size: 35px; background-color: #26d281; font-weight: bold; border-radius: 50px; box-shadow: 0 0 10px rgba(0,0,0,0.35); position: absolute; left: 50%; margin-left: -170px; bottom: 70px; cursor: pointer;}
 .map_btn a{ display: block; color:#fff; }
 
@@ -317,7 +317,7 @@ footer .container{ height: auto; box-sizing: border-box; padding: 45px 0 45px 20
 
 .area_cBox{width: 100%; height: auto;}
 .area_left, .area_right{ float: left; }
-.area_left{ width: 520px; height: 524px; background: url(../images/detail_map.png) 0 0 no-repeat; border:1px solid #d3d3d3; margin-right: 19px;}
+.area_left{ width: 520px; height: 524px; border:1px solid #d3d3d3; margin-right: 19px;}
 .area_right{ width: 380px; height: 524px; color:#242424; font-size: 16px; border: 1px solid #d3d3d3; border-top:0;}
 .area_right ul{ width: 100%; height: 174.5px;   }
 .area_right li{ padding: 5px 20px; overflow-y:auto; -ms-overflow-style: none; }
