--- a/css/reset.css
+++ b/css/reset.css
@@ -13,8 +13,8 @@
 
 */
 
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-@import url(http://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 @import url('https://fonts.googleapis.com/css?family=Lato|Roboto|Noto+Sans');
 
 
