--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @charset "uft-8";
+@import url(https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css);
 
 /* 공통 css */
 ::-webkit-scrollbar { display:none; } 
