--- a/css/main2.css
+++ b/css/main2.css
@@ -6,7 +6,7 @@
 
 body{ color:#1a1818; }
 
-header, .contents_wrap, .con_01_wrap, .con_02_wrap, .con_03_wrap, .con_04_wrap, .con_05_wrap, .con_06_wrap,
+header, .contents_wrap, manage_contents_wrap, .con_01_wrap, .con_02_wrap, .con_03_wrap, .con_04_wrap, .con_05_wrap, .con_06_wrap,
  .con_07_wrap, footer, con_order_wrap{ width: 100%; height: auto; }
 
 .container{ width: 973px; margin:0 auto;}
@@ -72,6 +72,7 @@ li.gnb_seclect a{ color: #26d281; }
 .header_bottom .container{ height: 74px; }
 
 .contents_wrap{ margin-top:122px; }
+.manage_contents_wrap{ margin-top:70px; }
 
 .con_01_wrap{ height: 805px; background: url(../images/con01_bg_1.png) 50% 50% no-repeat; position: relative;}
 /* .con01_title{ height: 490px; color:#fff; }
@@ -345,6 +346,7 @@ footer .container{ height: auto; box-sizing: border-box; padding: 45px 0 45px 20
 .pop_wrap p span{ color: #ff0000; }
 .pop_wrap .pop_cbox{ width: 22px; height: 22px; box-sizing: border-box; }
 .dt_pop_btn{ width: 300px;  height: 60px; line-height: 60px;  text-align: center; font-size: 35px; font-weight: bold; color:#fff; background: #26d281; border-radius: 50px; margin: 0 auto; cursor: pointer;}
+.dt_pop_btn2{ width: 300px;  height: 60px; line-height: 60px;  text-align: center; font-size: 20px; font-weight: bold; color:#fff; background: #26d281; border-radius: 50px; margin: 0 auto; cursor: pointer;}
 .pop_exit{ position: absolute; top:37px; right: 37px; cursor: pointer;}
 
 .detail_slider_img img { width:100%; }
@@ -458,6 +460,7 @@ span.caption_txt{ font-size: 15px; font-weight: normal; position: absolute;right
 .manage_con01_caption-txt p{ line-height: 30px; font-size: 18px; margin-top: 65px;}
 .manage_c02_wrap{ background: url(../images/main_1400px_v03.jpg) center center no-repeat; height: 1606px;}
 
+.con03{width: 1400px; background-color: #F4F5F7; padding-top: 80px; padding-bottom: 80px; margin:auto;}
 .management_con03_wrap{width: 1000px; height: auto; margin: 0 auto 0; background: #fff; border-radius: 15px;  box-sizing: border-box; padding: 50px 150px; position: relative; border: 1px solid #e5e5e5;}
 .management_con03_wrap > h1{ width: 91px; height: 85px; background: url(../images/pop_logo.png) 0 0 no-repeat; margin: 0 auto; text-align: center; margin-bottom: 20px;}
 .management_con03_wrap > h2{ text-align: center;  font-size: 30px; height: 50px; line-height: 50px; margin-bottom: 50px;}
@@ -473,6 +476,7 @@ span.caption_txt{ font-size: 15px; font-weight: normal; position: absolute;right
 .management_con03_wrap p span{ color: #ff0000; }
 .management_con03_wrap .pop_cbox{ width: 22px; height: 22px; box-sizing: border-box; }
 .management_form{ width: 100%; height: auto; margin-bottom: 40px;}
+.manage_cbox{ margin-top: 40px; }
 
 /* order-page */
 .order_button {
@@ -665,6 +669,7 @@ span.caption_txt{ font-size: 15px; font-weight: normal; position: absolute;right
 	.gnb li:hover:after{ display: none; }
 
 	.contents_wrap{ margin-top: 72px; }
+	.manage_contents_wrap{ margin-top: 40px; }
 
 	/* con_08_wrap */
 	.con_08_wrap {
@@ -674,17 +679,50 @@ span.caption_txt{ font-size: 15px; font-weight: normal; position: absolute;right
 	}
 
 	/*con_01_wrap*/	
-	.con_01_wrap{ height: auto; background-position: left 70% top 50%; background: url(../images/con01_bg_s_1.png) 50% 50% no-repeat; }
+	
 	.logo_header{ width: 88px; height: 24px; background: url(../images/logo_header_s.png) 0 0 no-repeat; margin-bottom: 12px;}	
-	.logo_header a{ width: 88px;	height: 24px; }
+	.logo_header a{ width: 88px; height: 24px; }
 	.logo_banner{display: none;}
-	.con01_title h1, .con01_title h3{ display: none;}
+
+	.con_01_wrap{ height: auto; background-position: left 70% top 50%; background: url(../images/con01_bg_s_1.png) 50% 50% no-repeat; }
+	.con01_title h1, .con01_title h3{ display: none; }
 	.con01_caption{ height: auto; }
-	.con01_caption .container{ padding:25px 20px;  height: auto;}
+	.con01_caption .container{ padding:25px 20px;  height: auto; }
 	.con01_caption-txt{ width: 100%; margin-left: 0px; }
 	.con01_caption-txt h2{ height: 16px;line-height: 16px;font-size: 16px; margin-bottom:20px; text-indent: 0; text-align: center; display: block;}
 	.about h3{ font-size: 30px; height: 22px; line-height: 22px; margin-bottom: 17px; color: white; text-align: center; font-weight: 300; display: none;}
 	.con01_caption-txt p{ font-size: 12px; line-height: 18px; margin-top:0px;}
+
+	/* management */
+	.manage_c01_wrap{ background: url(../images/management_bg_s.png) 50% 50% no-repeat; margin-top: 0; background-size: cover}
+	.manage_01_caption .container{ padding:25px 20px;  height: auto }
+	.manage_c01_title{ height: 200px; margin-left: 128px; padding-top: 138px;}
+	.manage_c01_title h3, .manage_c01_title h1{ display: none }
+	.manage_caption{ height: 170px; }
+	.manage_con01_caption-txt{ width: 100%; margin: 0 auto;}
+	.manage_con01_caption-txt h2{ height: 16px;line-height: 16px; font-size: 16px; margin-bottom:20px; text-indent: 0; display: block; text-align: center}
+	.manage_con01_caption-txt p{ font-size: 10px; line-height: 18px; margin-top:0px; text-align: center}
+	.manage_c02_wrap{ background: url(../images/mobile_720px_v02.jpg) 50% 0% no-repeat; background-size: 97%; height: 1350px;}
+	.container_02{ width: auto; }
+	
+	.con03{width: auto; background-color: #F4F5F7; padding-top: 40px; padding-bottom: 40px; padding-right: 30px; padding-left: 30px;}
+	.management_con03_wrap{width: auto; height: auto; margin: 0 auto 0; background: #fff; border-radius: 10px;  box-sizing: border-box; padding: 40px 20px; position: relative; border: 1px solid #e5e5e5;}
+	.management_con03_wrap > h1{ width: 91px; height: 85px; background: url(../images/pop_logo.png) 0 0 no-repeat; margin: 0 auto; text-align: center; margin-bottom: 20px;}
+	.management_con03_wrap > h2{ text-align: center;  font-size: 20px; height: 20px; line-height: 20px; margin-bottom: 20px;}
+	.management_con03_wrap ul{ width: 100%; height: 30px; margin-bottom:8px;}
+	.management_con03_wrap li{ height: 30px; line-height: 30px; font-size: 10px; float: left; color:#7f7f7f; }
+	.management_con03_wrap li input, .management_con03_wrap li textarea{ width: 100%; height: 100%; box-sizing: border-box; border:1px solid #e5e5e5;font-size: 10px;}
+	.management_con03_wrap li input{ line-height: 30px; text-indent: 20px; }
+	.management_con03_wrap li textarea{ line-height: 30px; box-sizing: border-box; padding:7px 10px; outline: none; font-family: 'Nanum Square', 'Sans-serif'; resize: none; }
+	.management_con03_wrap li:first-child{ width: 20%;  font-weight: bold; }
+	.management_con03_wrap li:last-child{ width: 80%; }
+	.management_con03_wrap p{font-size: 16px; line-height: 16px; text-align: center; margin-bottom: 21px;}
+	.management_con03_wrap p:last-child{ margin-bottom: 5px; }
+	.management_con03_wrap p span{ color: #ff0000; }
+	.management_con03_wrap .pop_cbox{ width: 15px; height: 15px; box-sizing: border-box; }
+	.management_form{ width: 100%; height: auto; margin-bottom: 20px;}
+	.manage_cbox{ margin-top: 20px; }
+	.manage_cbox p{ font-size: 10px; margin-bottom: 5px;}
 
 	/*con_02_wrap*/
 	.con_02_wrap h2, .con_03_wrap h2, .con_04_wrap h2, .con_05_wrap h2, .con_06_wrap h2, .con_07_wrap h2{height: 16px; line-height: 16px; font-size: 16px;}
@@ -866,6 +904,7 @@ span.caption_txt{ font-size: 15px; font-weight: normal; position: absolute;right
    .pop_wrap p { font-size: 12px; }
    .pop_wrap .pop_cbox { width: 16px; height: 16px; }
    .dt_pop_btn { width: 190px; height: 40px; line-height: 40px; font-size: 20px; }
+   .dt_pop_btn2 { width: 150px; height: 40px; line-height: 40px; font-size: 15px; }
    .pop_exit img { width: 20px; }
 
 
